<resources>
	<string name="app_name">Catnut</string>
	<string name="oauth">请用新浪微博账号登陆</string>
	<string name="refresh">刷新</string>
	<string name="auth_fail_with_reason">授权失败，原因：%1$s</string>
	<string name="auth_success">授权成功！</string>
	<string name="logout">退出</string>
	<string name="logout_confirm">确定结束应用了嘛?</string>
	<string name="no_tweets">没有相关的微博啦，换个关键字搜索或者刷新一下*_*</string>
	<string name="new_tweet_hint">嗯哼？</string>
	<string name="search_hint">本地搜索</string>
	<string name="authing_hint">正在联系新浪微博授权中...</string>
	<string name="open_drawer">打开抽屉...</string>
	<string name="close_drawer">关闭抽屉...</string>
	<string name="no_description">这家伙很懒，啥都没写→_→</string>
	<string name="followings">关注</string>
	<string name="followers">粉丝</string>
	<string name="tweets">微博</string>
	<string name="share_app">app分享</string>
	<string name="share_text">我正在使用『新浪微博Android Rest Client』，推荐你也用用:-) 介绍[http://longkai.github.io/catnut]，下载[https://dl.dropboxusercontent.com/u/96034496/apps/catnut-latest.apk]</string>
	<string name="github_link">https://github.com/longkai/catnut</string>
	<string name="my_profile">我的信息</string>
	<string name="cancellation">注销</string>
	<string name="cancellation_confirm">注销后需要重新向新浪申请授权的哦Orz</string>
	<string name="pref">设置</string>
	<string name="tweets_count_per_fetch">每页微博数</string>
	<string name="about">关于</string>
	<string name="advanced_settings">高级设置</string>
	<string name="commit_link">https://github.com/longkai/catnut/commits/master</string>
	<string name="version">版本</string>
	<string name="author">作者</string>
	<string name="show_thumbs">缩略图</string>
	<string name="show_thumbs_summary">是否显示缩略图（考虑流量），显示多大尺寸的缩略图（若考虑美观的说）</string>
	<string name="tweets_count_per_fetch_summary">每次刷新需要加载多少条微博咧*_*</string>
	<string name="auto_fetch_on_start">保持最新状态</string>
	<string name="auto_fetch_on_start_summary">优先联网加载数据（推荐），否则倾向于使用本地缓存的数据（非常省流量，但是数据很可能不是最新的）</string>
	<string name="general_settings">基本设置</string>
	<string name="source_code">源代码</string>
	<string name="source_code_summary">本应用开源哦，感兴趣的话戳这里*_*</string>
	<string name="my_timeline">我的时间线</string>
	<string name="supported_font_types">只支持[ttf|otf|fon|ttc]格式的字体文件！</string>
	<string name="customized_font_message">自定义字体需要自己提供字体文件哦！支持[ttf|otf|fon|ttc]格式</string>
	<string name="keep_current_font">保持现有</string>
	<string name="use_default_font">使用默认</string>
	<string name="customize_font">自定义</string>
	<string name="select_font_title">选择字体文件[ttf|otf|fon|ttc]</string>
	<string name="font">字体</string>
	<string name="change_font_summary">默认的字体不合适？换一个心情吧*_*</string>
	<string name="font_size">字体大小</string>
	<string name="adjust_font_size_summary">调整微博字体的大小</string>
	<string name="my_followings_title">我关注的</string>
	<string name="no_more">没有更多啦！</string>
	<string name="follow_me_title">关注我的</string>
	<string name="notes">说明</string>
	<string name="notes_summary">@string/new_tweet_hint</string>
	<string name="enable_analytics">匿名统计</string>
	<string name="enable_analytics_summary">使用「Google Analytics」的匿名统计数据帮助作者改进「Catnut」</string>
	<string name="latest_statues">最新状态</string>
	<string name="like">赞</string>
	<string name="photos">照片</string>
	<string name="his">Ta的</string>
	<string name="user_not_found">该用户不存在！</string>
	<string name="load_cover_fail">载入封面图片失败，使用默认图片Orz</string>
	<string name="his_followers">%1$s 的粉丝</string>
	<string name="his_followings">%1$s 的关注</string>
	<string name="loading">载入中...</string>
	<string name="show_latest_tweet">显示最新一条微博</string>
	<string name="show_latest_tweet_summary">查看用户信息时显示Ta最新的一条微博</string>
	<string name="follow">关注Ta</string>
	<string name="follow_success">关注成功！</string>
	<string name="unfollow">取消关注</string>
	<string name="unfollow_success">取消关注成功！</string>
	<string name="tweet">微博</string>
	<string name="share">分享</string>
	<string name="tweet_share_subject">来自Catnut的分享</string>
	<string name="favorite">收藏</string>
	<string name="retweet">转发</string>
	<string name="cancle_favorite">取消收藏</string>
	<string name="favorite_success">收藏成功！</string>
	<string name="cancle_favorite_success">取消收藏成功！</string>
	<string name="my_favorites">我的收藏</string>
	<string name="comment_success">评论成功！</string>
	<string name="reply_success">回复成功！</string>
	<string name="reply_comment_hint">回复@%1$s:</string>
	<string name="abort_existing_reply_alert">确定抛弃刚才码的东西？</string>
	<string name="comment_tweet">评论微博</string>
	<string name="require_not_empty">码几个字先嘛*_*</string>
	<string name="compose">发微博</string>
	<string name="action_send">发送</string>
	<string name="post_success">发送成功！</string>
	<string name="abort_existing_tweet_alert">确定牺牲正在编织的微博？</string>
	<string name="retweet_success">转发成功！</string>
	<string name="retweet_option_hint">转发同时评论?</string>
	<string name="add_emotions">表情</string>
	<string name="reply_current">评论给当前微博</string>
	<string name="reply_original">评论给原微博</string>
	<string name="reply_both">都评论</string>
	<string name="add_photo">添加照片</string>
	<string name="mention">艾特</string>
	<string name="take_a_photo">拍照</string>
	<string name="where_am_i">我在这里</string>
	<string name="only_one_pic_hint">对不起，非技术上的原因，目前只能上传一张图片，你可以长按已上传的图片删除掉再上传Orz</string>
	<string name="sorry_cannot_locate">抱歉，无法定位！</string>
	<string name="locating">正在定位中...</string>
	<string name="locate_success">定位成功！点击定位图标可以取消定位</string>
	<string name="device_not_support">你的设备好像不支持拍照功能?</string>
	<string name="mention_schema">%1$s （%2$s）</string>
	<string name="mention_hint">who?</string>
	<string name="mention_text">\@%1$s&#160;</string>
	<string name="no_links_hint">没有可以转换的链接哦，注意得以http/https这样开头哟</string>
	<string name="converting">转换中...</string>
	<string name="shorten">短链接转换</string>
	<string name="view_photos">查看照片</string>
	<string name="action">Perform action</string>
	<string name="confirm">确认</string>
	<string name="confirm_delete">你是认真的麽？</string>
	<string name="network_unavailable">亲，你的网络貌似出了点状况...</string>
	<string name="his_timeline">%1$s 的时间线</string>
	<string name="home_timeline">主页时间线</string>
	<string name="notify_send_tweet">发送微博</string>
	<string name="notify_send_tweet_text">微博正在发送中...</string>
	<string name="notify_waiting_result">等待新浪返回结果...</string>
	<string name="post_fail">发送失败！草稿已保存！</string>
	<string name="my_drafts">我的草稿</string>
	<string name="send_draft_confirm">确定发送草稿吗？</string>
	<string name="background_sending">后台发送中...</string>
	<string name="list">分组</string>
	<string name="draft">草稿</string>
	<string name="others">其它</string>
	<string name="about_body"><![CDATA[
        <b>{ }</b> with <b>♥</b> by <b><a href="mailto:im.longkai@gmail.com">longkai</a></b> in <b>Guilin</b>.
        It was initially created for a girl.<br>
        <i>Catnut</i> is a compound word of cat and nut, which was made by one of my friends.
        Whatever it means, hope you like it!
        <br><br>

        Copyright 2014 longkai<br>
        All Rights Reserved.<br><br>

		This software shall be used for good, not evil.<br><br>

        Many thanks to these open source projects:<br><br>

        <b><a href="http://square.github.io/picasso/">Picasso</a>&nbsp;</b><br>
        <i>by Square</i><br><br>

        <b><a href="https://github.com/chrisbanes/ActionBar-PullToRefresh">ActionBar-PullToRefresh</a>&nbsp;</b><br>
        <i>by Chris Banes</i><br><br>

        <b><a href="http://viewpagerindicator.com/">ViewPagerIndicator</a>&nbsp;</b><br>
        <i>by Jake Wharton, Patrik Åkerfeldt, and Francisco Figueiredo Jr.</i><br><br>

		<b><a href="http://www.google.com/events/io/2010/sessions/developing-RESTful-android-apps.htm.com/">Code inspired</a>&nbsp;</b><br>
        <i>from Google I/O 2010</i><br><br>

        <b><a href="https://about.twitter.com/zh-hans/products/android/">Design inspired</a>&nbsp;</b><br>
        <i>from Twitter for Android</i><br><br>

        <b>Some icons &nbsp;</b><br>
        <i>from Twitter for Android and my friends:-)</i><br><br>
    ]]></string>
	<string name="salutation"><![CDATA[
		<b>要等你，要证明自己</b><br><br>
		<b>我可以纵容你在心底<b><br><br>
		<b>也可以当你只是路过的人而已</b><br><br>
		<b>『我等你 - 刘若英』</b><br><br>
	]]></string>
	<string name="salutation2"><![CDATA[
		<b>蒹葭苍苍，白露为霜</b><br><br>
		<b>所谓伊人，在水一方<b><br><br>
		<b>溯洄从之，道阻且长</b><br><br>
		<b>溯游从之，宛在水中央</b><br><br><br>
		<b>蒹葭萋萋，白露未晞</b><br><br>
		<b>所谓伊人，在水之湄</b><br><br>
		<b>所谓伊人，在水之湄</b><br><br>
		<b>溯洄从之，道阻且跻</b><br><br>
		<b>溯游从之，宛在水中坻</b><br><br><br>
		<b>蒹葭采采，白露未已</b><br><br>
		<b>所谓伊人，在水之涘</b><br><br>
		<b>所谓伊人，在水之涘</b><br><br>
		<b>溯洄从之，道阻且右</b><br><br>
		<b>溯游从之，宛在水中沚</b><br><br>
		<b>『诗经』</b><br><br>
	]]></string>
	<string name="about_version_template">v%1$s</string>
	<string name="hide_fantasy_words">隐藏文字</string>
	<string name="show_fantasy_words">显示文字</string>
	<string name="app_desc">追求 <b>简洁&amp;流畅&amp;高速</b></string>
	<string name="default_art">默认</string>
	<string name="enable_fantasy">启用fantasy</string>
	<string name="enable_fantasy_summary">启用后，每天你都可以发现和分享各种精彩照片:-) 版权归原作者或「500px」所有，建议在wifi下开启</string>
	<string name="enter_home_directly">直接进入主页</string>
	<string name="enter_home_directly_on_summary">启动应用后进入Fantasy</string>
	<string name="enter_home_directly_off_summary">启动应用后进入主页时间线</string>
	<string name="fantasy">fantasy</string>
	<string name="unknown_user">\@微博用户</string>
	<string name="find_new_version">发现新版本！（%1$s）</string>
	<string name="down_load_and_upgrade">下载并更新</string>
	<string name="already_updated">你已经是最新版本:-)</string>
	<string name="not_upgrade_now">暂不更新:-(</string>
	<string name="done_download">新版本下载完成:-)</string>
	<string name="click_to_upgrade">点击更新！</string>
	<string name="download_apk">下载安装包</string>
	<string name="downloading">正在下载中...</string>
	<string name="check_now">检查更新中...</string>
	<string name="not_yet_auth">您没有授权或者授权过期，请重新登陆新浪微博!</string>
	<string name="line_spacing">字体行距</string>
	<string name="line_spacing_summary">调整微博字体的行距</string>
	<string name="mime_text_plain">text/plain</string>
	<string name="mime_image">image/*</string>
	<string name="cannot_create_dir">无法建立目录！</string>
	<string name="clear_cache">清除缓存</string>
	<string name="clear_images">微博配图 %1$s</string>
	<string name="clear_fantasies">fantasy %1$s</string>
	<string name="clear_sqlite">清除微博缓存</string>
	<string name="clear_cache_summary">清除缓存的图片和微博等</string>
	<string name="clear_cache_success">清除成功</string>
	<string name="clearing">清除中...</string>
	<string name="fantasy_share">「%1$s」 分享自Catnut - fantasy</string>
	<string name="mine">我的</string>
	<string name="discovery">话题</string>
	<string name="malformed_json">无法解析的json数据！</string>
	<string name="new_tweet_count">新微博</string>
	<string name="new_comment_count">新评论</string>
	<string name="new_mention_count">\@</string>
	<string name="last_check_time">%1$s，点击刷新</string>
	<string name="error_click_try_again">出错了...点击重试</string>
	<string name="mention_me_timeline">艾特时间线</string>
	<string name="received_reply">收到的评论</string>
	<string name="swipe_right_hint">向右滑动试试！</string>
	<string name="plugins">插件</string>
	<string name="zhihu_refresh_hint">当前没有条目，请下拉或者点击菜单刷新！</string>
	<string name="read_zhihu">知乎精选</string>
	<string name="view_all_answer">查看所有回答</string>
	<string name="zhihu_view_on_web">在网页上阅读</string>
	<string name="downloading_img">下载图片中...</string>
	<string name="img_download_done">图片下载完毕！</string>
	<string name="total_cache_img">共缓存%1$s张图片在%2$s</string>
	<string name="pager_mode">左右切换阅读模式</string>
	<string name="simple_mode">普通模式</string>
	<string name="tweet_text_copied">微博内容已复制到剪切板</string>
	<string name="read_zhihu_summary">每日知乎精选，版权归原作者及知乎所有</string>
	<string name="plugins_summay">启用，禁用，设置一些有趣或有用的插件</string>
	<string name="plugins_pref">插件设置</string>
	<string name="enable">启用</string>
	<string name="read_mode">阅读模式</string>
	<string name="pager_read_mode_summary">向左滑动查看上一篇，向右滑动查看下一篇（测试功能）</string>
	<string name="simple_read_mode_summary">单页查看</string>
	<string name="auto_refresh">自动刷新</string>
	<string name="auto_refresh_on_summary">每次启用时自动刷新条目</string>
	<string name="auto_refresh_off_summary">自行下拉刷新</string>
	<string name="say_salutation">显示应用说明</string>
</resources>