<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ The MIT License (MIT)
  ~ Copyright (c) 2014 longkai
  ~ The software shall be used for good, not evil.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

	<item
		android:id="@+id/action_comment"
		android:title="@string/comment_tweet"
		android:showAsAction="always"
		android:icon="@drawable/ic_title_reply" />

	<item
		android:id="@+id/action_reteet"
		android:title="@string/retweet"
		android:showAsAction="always"
		android:icon="@drawable/ic_title_retweet" />

	<item
		android:id="@+id/action_toggle_favorite"
		android:title="@string/favorite"
		android:showAsAction="never"
		android:icon="@drawable/ic_title_favorite" />

	<!--微博本来就是一个社交分享工具，没有必要强调这一点，所以就never了-->
	<item
		android:id="@+id/share"
		android:title="@string/share"
		android:showAsAction="never"
		android:actionProviderClass="android.widget.ShareActionProvider" />

	<item
		android:id="@id/pref"
		android:title="@string/pref"
		android:showAsAction="never" />
</menu>