<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ The MIT License (MIT)
  ~ Copyright (c) 2014 longkai
  ~ The software shall be used for good, not evil.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item
		android:title="通知"
		android:icon="@drawable/ic_title_notifications"
		android:showAsAction="always">
		<menu>
			<item
				android:id="@+id/mention_me_tweet"
				android:title="\@我的微博" />
			<item
				android:id="@+id/mention_me_tweet"
				android:title="\@我的评论" />
		</menu>
	</item>
	<item
		android:id="@+id/action_compose"
		android:title="@string/compose"
		android:icon="@drawable/ic_title_compose"
		android:showAsAction="always" />
	<item
		android:id="@+id/cancellation"
		android:title="@string/cancellation"
		android:showAsAction="never" />
	<item
		android:id="@+id/logout"
		android:title="@string/logout"
		android:showAsAction="never" />
	<item
		android:id="@+id/fantasy"
		android:title="@string/fantasy"
		android:showAsAction="never" />
	<item
		android:id="@id/pref"
		android:title="@string/pref"
		android:showAsAction="never" />
</menu>