<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ The MIT License (MIT)
  ~ Copyright (c) 2014 longkai
  ~ The software shall be used for good, not evil.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

	<item
		android:id="@+id/action_gallery"
		android:title="@string/add_photo"
		android:icon="@drawable/ic_title_new_picture"
		android:showAsAction="always" />

	<item
		android:id="@+id/action_camera"
		android:title="@string/take_a_photo"
		android:icon="@drawable/ic_title_camera"
		android:showAsAction="always" />

	<item
		android:id="@+id/action_geo"
		android:title="@string/where_am_i"
		android:icon="@drawable/ic_title_geo"
		android:showAsAction="always" />

	<item
		android:id="@id/pref"
		android:title="@string/pref"
		android:showAsAction="never" />
</menu>