<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ The MIT License (MIT)
  ~ Copyright (c) 2014 longkai
  ~ The software shall be used for good, not evil.
  -->
<android.support.v4.widget.DrawerLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@id/drawer_layout"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<FrameLayout
		android:id="@id/fragment_container"
		android:layout_width="match_parent"
		android:layout_height="match_parent" />

	<org.catnut.support.QuickReturnScrollView
		android:id="@id/drawer"
		android:padding="@dimen/medium"
		android:layout_gravity="start"
		android:layout_width="300dp"
		android:layout_height="match_parent"
		android:background="@drawable/balloon_background">

		<FrameLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<LinearLayout
				android:orientation="vertical"
				android:layout_width="match_parent"
				android:layout_height="match_parent">

				<!--header view-->
				<RelativeLayout
					android:orientation="horizontal"
					android:layout_width="match_parent"
					android:layout_height="100dp">

					<ImageView
						android:id="@id/avatar_profile"
						android:layout_alignParentLeft="true"
						android:layout_marginRight="@dimen/medium"
						android:layout_width="100dp"
						android:layout_height="100dp" />

					<TextView
						android:id="@id/nick"
						android:layout_toRightOf="@id/avatar_profile"
						android:textAppearance="@android:style/TextAppearance.Large"
						android:textColor="@color/actionbar_background"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content" />

					<ImageView
						android:id="@id/verified"
						android:visibility="gone"
						android:src="@drawable/ic_verified"
						android:layout_toRightOf="@id/nick"
						android:layout_alignTop="@id/nick"
						android:layout_alignBottom="@id/nick"
						android:layout_marginLeft="@dimen/small"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content" />

					<TextView
						android:id="@+id/location"
						android:layout_below="@id/nick"
						android:layout_alignLeft="@id/nick"
						android:textColor="@android:color/darker_gray"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content" />

					<ScrollView
						android:layout_marginTop="@dimen/small"
						android:layout_alignLeft="@id/nick"
						android:layout_alignBottom="@id/avatar_profile"
						android:layout_below="@id/location"
						android:layout_width="match_parent"
						android:layout_height="wrap_content">

						<TextView
							android:id="@id/description"
							android:textColor="@color/black50PercentColor"
							android:layout_width="match_parent"
							android:layout_height="wrap_content" />
					</ScrollView>
				</RelativeLayout>

				<!--place holder view-->
				<View
					android:id="@id/place_holder"
					android:layout_width="match_parent"
					android:layout_height="100dp" />

				<LinearLayout
					android:id="@id/statics"
					android:layout_marginTop="@dimen/medium"
					android:orientation="horizontal"
					android:showDividers="middle"
					android:divider="?android:dividerVertical"
					android:layout_width="match_parent"
					android:layout_height="wrap_content">

					<include
						android:id="@id/tweets_count"
						android:layout_weight="1"
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						layout="@layout/two_line_text" />

					<include
						android:id="@id/following_count"
						android:layout_weight="1"
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						layout="@layout/two_line_text" />

					<include
						android:id="@id/followers_count"
						android:layout_weight="1"
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						layout="@layout/two_line_text" />
				</LinearLayout>

				<LinearLayout
					android:orientation="vertical"
					android:showDividers="middle"
					android:padding="@dimen/medium"
					android:divider="?android:attr/listDivider"
					android:layout_width="match_parent"
					android:layout_height="wrap_content">

					<TextView
						android:text="@string/mine"
						android:textColor="@android:color/holo_blue_bright"
						android:layout_marginTop="@dimen/medium"
						android:layout_marginBottom="@dimen/medium"
						android:textAppearance="?android:attr/textAppearanceMedium"
						android:layout_width="match_parent"
						android:layout_height="wrap_content" />

					<View
						android:background="@android:color/holo_blue_bright"
						android:layout_width="match_parent"
						android:layout_height="1px" />

					<TextView
						android:id="@+id/action_my_tweets"
						android:text="@string/tweets"
						style="@style/Profile_Action" />

					<TextView
						android:id="@+id/action_my_followings"
						android:text="@string/followings"
						style="@style/Profile_Action" />

					<TextView
						android:id="@+id/action_my_followers"
						android:text="@string/followers"
						style="@style/Profile_Action" />

					<TextView
						android:id="@+id/action_my_list"
						android:text="@string/list"
						style="@style/Profile_Action" />

					<TextView
						android:id="@+id/action_my_favorites"
						android:text="@string/favorite"
						style="@style/Profile_Action" />

					<TextView
						android:id="@+id/action_my_drafts"
						android:text="@string/draft"
						style="@style/Profile_Action" />

					<TextView
						android:text="@string/plugins"
						android:textColor="@android:color/holo_blue_bright"
						android:layout_marginTop="@dimen/medium"
						android:layout_marginBottom="@dimen/medium"
						android:textAppearance="?android:attr/textAppearanceMedium"
						android:layout_width="match_parent"
						android:layout_height="wrap_content" />

					<View
						android:background="@android:color/holo_blue_bright"
						android:layout_width="match_parent"
						android:layout_height="1px" />

					<TextView
						android:text="@string/fantasy"
						android:onClick="switch2Plugins"
						style="@style/Profile_Action" />

					<TextView
						android:onClick="switch2Plugins"
						android:text="@string/read_zhihu"
						style="@style/Profile_Action" />

					<TextView
						android:text="@string/others"
						android:textColor="@android:color/holo_blue_bright"
						android:layout_marginTop="@dimen/medium"
						android:layout_marginBottom="@dimen/medium"
						android:textAppearance="?android:attr/textAppearanceMedium"
						android:layout_width="match_parent"
						android:layout_height="wrap_content" />

					<View
						android:background="@android:color/holo_blue_bright"
						android:layout_width="match_parent"
						android:layout_height="1px" />

					<TextView
						android:id="@+id/action_share_app"
						android:text="@string/share_app"
						style="@style/Profile_Action" />

					<TextView
						android:id="@+id/action_view_source_code"
						android:text="@string/source_code"
						style="@style/Profile_Action" />
				</LinearLayout>
			</LinearLayout>

			<!--sticky view-->
			<LinearLayout
				android:id="@+id/quick_return"
				android:layout_marginTop="@dimen/small"
				android:orientation="vertical"
				android:layout_width="match_parent"
				android:layout_height="100dp">

				<TextView
					android:id="@+id/fetch_news"
					android:text="@string/last_check_time"
					android:padding="@dimen/medium"
					android:gravity="center"
					android:clickable="true"
					android:background="?android:attr/selectableItemBackground"
					android:textColor="@android:color/holo_blue_bright"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:layout_width="match_parent"
					android:layout_height="wrap_content" />

				<View
					android:background="@android:color/holo_blue_bright"
					android:layout_width="match_parent"
					android:layout_height="1px" />

				<LinearLayout
					android:id="@+id/news"
					android:layout_marginTop="@dimen/medium"
					android:orientation="horizontal"
					android:showDividers="middle"
					android:divider="?android:dividerVertical"
					android:layout_width="match_parent"
					android:layout_height="wrap_content">

					<include
						android:id="@+id/new_comment"
						android:layout_weight="1"
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						layout="@layout/two_line_text" />

					<include
						android:id="@+id/new_mention"
						android:layout_weight="1"
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						layout="@layout/two_line_text" />

					<include
						android:id="@+id/new_tweet"
						android:layout_weight="1"
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						layout="@layout/two_line_text" />
				</LinearLayout>
			</LinearLayout>
		</FrameLayout>
	</org.catnut.support.QuickReturnScrollView>
</android.support.v4.widget.DrawerLayout>
